english FAQ update.

--- a/src/AppBundle/Resources/views/Default/faq.en.html.twig
+++ b/src/AppBundle/Resources/views/Default/faq.en.html.twig
@@ -15,7 +15,7 @@
 <div style="text-align:justify">
 
     <h1 id="FAQ">Notes, Errata, and Frequently Asked Questions</h1>
-    <h3>Version 2.1, effective 2/21/2019</h3>
+    <h3>Version 2.2, effective 5/13/2019</h3>
 
     <p>This document contains card clarification, errata, rule clarifications, frequently asked questions, and quick
         reference material for <em>A Game of Thrones: The Card Game</em>. The most recent version of this document is
@@ -25,9 +25,8 @@
                 class="new">red</span>.</p>
 
     <p>
-        <b>New Content (v2.1):</b>
+        <b>New Content (v2.2):</b>
         <a href="#Card_Errata">Card Errata</a>,
-        <a href="#Rulings_and_Clarifications">Rulings and Clarifications</a>,
         <a href="#Joust_Restricted_List">Joust Restricted List</a>,
         <a href="#Melee_Restricted_List">Melee Restricted List</a>,
         <a href="#Frequently_Asked_Questions">Frequently Asked Questions</a>
@@ -76,14 +75,31 @@
                     target="_blank">Balon Greyjoy</a> <em>(Kings of the Isles, 1)</em></b><br>
     Should read: "...At the end of the phase, if that card is still in play, shuffle it into its owner's deck."</p>
 
-    <p class="new">
+    <p>
         <b>
             (v2.1)
             <a href="https://thronesdb.com/card/04111" target="_blank">Esgred</a>
             <em>(War of the Five Rings, 111)</em>
+        </b>
+        <br>
             Should read: "If you control Asha Greyjoy, sacrifice Esgred.
             Then, your Asha Greyjoy gains 1 power."
+    </p>
+
+    <p class="new">
+        <b>
+            (v2.2) Kingsgrave <em>(Fury of the Storm, 30)</em>
         </b>
+        <br>
+            Card text is improperly formatted; the word &quot;Kingsgrave&quot; should
+            not be formatted as a trait.
+    </p>
+    <p class="new">
+        <b>
+            (v2.2) Dothraki Steed <em>(Fury of the Storm, 36)</em>
+        </b>
+        <br>
+            Should read: &quot;Limit 1 copy per character.&quot;
     </p>
     <h1 id="Definitions_and_Terms">Definitions and Terms</h1>
 
@@ -209,7 +225,7 @@
     <p>A player cannot bring a unique card into play as a duplicate if another copy of that unique card is in his or her
         dead pile.</p>
 
-    <p class="new">
+    <p>
         Marshaling a duplicate is not considered to be marshaling a card with any of that card’s characteristics.
         It is only considered to be "marshaling a duplicate." While marshaling a duplicate, that card is not subject to
         restrictions based on the card’s printed characteristics, including cardtype, faction, keywords, etc.</p>
@@ -520,6 +536,11 @@
         restricted cards in the same deck. A player may run as many copies of his or her chosen restricted card in a
         deck as the regular game rules (or card text) allow.</p>
 
+    <p class="new">
+        Removed (v2.2):
+        <a class="new" href="https://thronesdb.com/card/01100" target="_blank">Hear Me Roar!</a> <em>(Core, 100)</em>
+    </p>
+
     <p><b><u>Neutral</u>:</b><br>
         <a href="https://thronesdb.com/card/06040" target="_blank">The Annals of Castle Black</a> <em>(Guarding the
             Realm, 40)</em><br>
@@ -535,27 +556,28 @@
         <a href="https://thronesdb.com/card/10045" target="_blank">The Wars to Come</a> <em>(Sands of Dorne, 45)</em>
         <br>
         <a href="https://thronesdb.com/card/10050" target="_blank">Breaking Ties</a> <em>(Sands of Dorne, 50)</em><br>
+        <a href="https://thronesdb.com/card/09051" target="_blank">Trade Routes</a> <em>(House of Thorns, 51)</em><br>
         <span class="new">
-            <a href="https://thronesdb.com/card/09051" target="_blank">Trade Routes</a> <em>(House of Thorns, 51)</em>
+            <a class="new" href="https://thronesdb.com/card/12045" target="_blank">Sea of Blood</a> <em>(Kings of the Isles, 45)</em>
         </span>
     </p>
 
     <p>
         <b><u>Greyjoy</u>:</b><br>
-        <span class="new">
-            <a href="https://thronesdb.com/card/02091" target="_blank">Raider from Pyke</a> <em>(Calm Over Westeros, 91)</em>
-        </span>
+        <a href="https://thronesdb.com/card/02091" target="_blank">Raider from Pyke</a> <em>(Calm Over Westeros, 91)</em>
+        <br>
+        <a href="https://thronesdb.com/card/02092" target="_blank">Iron Mines</a> <em>(Calm Over Westeros, 92)</em>
         <br>
         <span class="new">
-            <a href="https://thronesdb.com/card/02092" target="_blank">Iron Mines</a> <em>(Calm Over Westeros, 92)</em>
+            <a class="new" href="https://thronesdb.com/card/11051" target="_blank">Drowned God Fanatic</a>
+            <em>(Streets of King's Landing, 51)</em>
         </span>
     </p>
 
     <p>
         <b><u>Lannister</u>:</b><br>
         <a href="https://thronesdb.com/card/05010" target="_blank">Taena Merryweather</a> <em>(Lions of Casterly Rock,
-            10)</em><br>
-        <a href="https://thronesdb.com/card/01100" target="_blank">Hear Me Roar!</a> <em>(Core, 100)</em>
+            10)</em>
     </p>
 
     <p>
@@ -563,23 +585,19 @@
         <a href="https://thronesdb.com/card/01109" target="_blank">The Red Viper</a> <em>(Core, 109)</em><br>
         <a href="https://thronesdb.com/card/04017" target="_blank">Tower of the Sun</a> <em>(Across the Seven Kingdoms, 17)</em>
         <br>
+        <a href="https://thronesdb.com/card/10017" target="_blank">Dorne</a> <em>(Sands of Dorne, 17)</em>
+        <br>
         <span class="new">
-            <a href="https://thronesdb.com/card/10017" target="_blank">Dorne</a>
-            <em>(Sands of Dorne, 17)</em>
+            <a class="new" href="https://thronesdb.com/card/11076" target="_blank">A Mission in Essos</a>
+            <em>(Music of Dragons, 76)</em>
         </span>
     </p>
 
     <p>
         <b><u>Stark</u>:</b><br>
-        <span class="new">
-            <a href="https://thronesdb.com/card/11021" target="_blank">Wyman Manderly</a>
-            <em>(The March on Winterfell, 21)</em>
-        </span>
+        <a href="https://thronesdb.com/card/11021" target="_blank">Wyman Manderly</a> <em>(The March on Winterfell, 21)</em>
         <br>
-        <span class="new">
-            <a href="https://thronesdb.com/card/02102" target="_blank">Ward</a>
-            <em>(True Steel, 102)</em>
-        </span>
+        <a href="https://thronesdb.com/card/02102" target="_blank">Ward</a> <em>(True Steel, 102)</em>
     </p>
     <p>
         <b><u>Tyrell</u>:</b><br>
@@ -596,15 +614,9 @@
 
     <p>
         <b><u>Targaryen</u>:</b><br>
-        <span class="new">
-            <a href="https://thronesdb.com/card/11033" target="_blank">Hizdahr zo Loraq</a>
-            <em>(The March on Winterfell, 33)</em>
-        </span>
+        <a href="https://thronesdb.com/card/11033" target="_blank">Hizdahr zo Loraq</a> <em>(The March on Winterfell, 33)</em>
         <br>
-        <span class="new">
-            <a href="https://thronesdb.com/card/11034" target="_blank">Meereen</a>
-            <em>(The March on Winterfell, 34)</em>
-        </span>
+        <a href="https://thronesdb.com/card/11034" target="_blank">Meereen</a> <em>(The March on Winterfell, 34)</em>
     </p>
 
     <h2 id="Melee_Restricted_List">Melee Restricted List</h2>
@@ -626,15 +638,9 @@
         <a href="https://thronesdb.com/card/08098" target="_blank">"The Song of the Seven"</a> <em>(The Faith Militant,
             98)</em>
         <br>
-        <span class="new">
-            <a href="https://thronesdb.com/card/05049" target="_blank">Littlefinger’s Meddling</a>
-            <em>(Lions of Casterly Rock, 49)</em>
-        </span>
+        <a href="https://thronesdb.com/card/05049" target="_blank">Littlefinger’s Meddling</a> <em>(Lions of Casterly Rock, 49)</em>
         <br>
-        <span class="new">
-            <a href="https://thronesdb.com/card/06040" target="_blank">The Annals of Castle Black</a>
-            <em>(Guarding the Realm, 40)</em>
-        </span>
+        <a href="https://thronesdb.com/card/06040" target="_blank">The Annals of Castle Black</a> <em>(Guarding the Realm, 40)</em>
     </p>
 
     <p><b><u>Greyjoy</u>:</b><br>
@@ -652,10 +658,7 @@
     <p><b><u>Martell</u>:</b><br>
         <a href="https://thronesdb.com/card/01119" target="_blank">Doran's Game</a> <em>(Core, 119)</em>
         <br>
-        <span class="new">
-            <a href="https://thronesdb.com/card/11076" target="_blank">A Mission in Essos</a>
-            <em>(Music of Dragons, 76)</em>
-        </span>
+        <a href="https://thronesdb.com/card/11076" target="_blank">A Mission in Essos</a> <em>(Music of Dragons, 76)</em>
     </p>
 
     <p><b><u>Stark</u>:</b><br>
@@ -669,10 +672,7 @@
             36)</em><br>
         <a href="https://thronesdb.com/card/01162" target="_blank">Khal Drogo</a> <em>(Core, 162)</em>
         <br>
-        <span class="new">
-            <a href="https://thronesdb.com/card/11054" target="_blank">Queensguard</a>
-            <em>(Streets of King’s Landing, 54)</em>
-        </span>
+        <a href="https://thronesdb.com/card/11054" target="_blank">Queensguard</a> <em>(Streets of King’s Landing, 54)</em>
     </p>
 
     <p><b><u>Tyrell</u>:</b><br>
@@ -680,10 +680,7 @@
             24)</em><br>
         <a href="https://thronesdb.com/card/06004" target="_blank">All Men Are Fools</a> <em>(All Men Are Fools, 4)</em>
         <br>
-        <span class="new">
-            <a href="https://thronesdb.com/card/03038" target="_blank">To the Rose Banner!</a>
-            <em>(Wolves of the North, 38)</em>
-        </span>
+        <a href="https://thronesdb.com/card/03038" target="_blank">To the Rose Banner!</a> <em>(Wolves of the North, 38)</em>
     </p>
 
     <h1 id="Frequently_Asked_Questions">Frequently Asked Questions</h1>
@@ -795,6 +792,16 @@
 
     <p class="mplain"><b>Related:</b> <a href="https://thronesdb.com/card/02064" target="_blank">The Arbor</a>,
         <a href="https://thronesdb.com/card/05017" target="_blank">Golden Tooth</a>.</p>
+
+
+    <h3 id="FAQ_21" class="new">Limited Card as Duplicate</h3>
+    <p class="new">
+        <i>If I play a limited card as a duplicate, does it count as my limited card for the round?</i>
+    </p>
+    <p class="new">
+        No. When you marshal a card as a duplicate, it is not considered to have any of its printed keywords,
+        including the limited keyword.
+    </p>
 
     <h3 id="FAQ_9">Wolves of the North</h3>
 
@@ -946,9 +953,9 @@
 
     <p>Yes. The Hand's Judgment has a cost of X, where X is defined as the printed cost of the event being canceled. If The Hand's Judgment is used to cancel a "—" event, which has no printed cost, that X will be undefined. An undefined X value defaults to 0, therefore The Hand's Judgment can be played for 0 gold.</p>
 
-    <h3 id="FAQ_20" class="new">Scouting Vessel</h3>
+    <h3 id="FAQ_20">Scouting Vessel</h3>
 
-    <p class="new">
+    <p>
         <i>How does <a href="https://thronesdb.com/card/12020" target="_blank">Scouting Vessel</a>
             (Kings of the Isles, 20) interact with other reactions and interrupts to discarding a card using pillage,
             such as <a href="https://thronesdb.com/card/12003" target="_blank">Asha Greyjoy</a> (Flight of Crows, 51)
@@ -956,13 +963,13 @@
             (Lions of Casterly Rock, 6)?
         </i>
     </p>
-    <p class="new">
+    <p>
         Scouting Vessel’s ability is a replacement effect that replaces "a card being discarded using pillage" with
         "3 cards being discarded using pillage." If Scouting Vessel is used on the card Asha Greyjoy discards using
         pillage, Asha is considered to have discarded 3 cards using pillage and her reaction can be triggered
         3 times.
     </p>
-    <p class="new">
+    <p>
         If Tywin Lannister’s ability is triggered on a card discarded using pillage, and then Scouting Vessel is
         triggered, Scouting Vessel’s ability will be the one that resolves because it is the most recently
         applied replacement effect. If Scouting Vessel’s ability is triggered first, Tywin Lannister’s ability
