--- a/src/AppBundle/Resources/views/Reviews/reviews.html.twig
+++ b/src/AppBundle/Resources/views/Reviews/reviews.html.twig
@@ -59,8 +59,12 @@
                                         <a href="{{ path('user_profile_public', {user_id:review.user.id,user_name:review.user.username|e('url')}) }}"
                                            rel="author"
                                            class="username {{ review.user.color }}">{{ review.user.username }}</a>
-                                        {% if review.user.donation > 0 %}<span class="fas fa-gift donator"
-                                                                               title="ThronesDB Gracious Donator"></span>{% endif %}
+                                        {% if review.user.role('ROLE_ADMIN') %}
+                                            <span class="fas fa-user-tie admin" title="Administrator"></span>
+                                        {% endif %}
+                                        {% if review.user.donation > 0 %}
+                                            <span class="fas fa-gift donator" title="ThronesDB Gracious Donator"></span>
+                                        {% endif %}
                                         <small class="reputation">{{ review.user.reputation }}</small>
                                     </div>
 
@@ -73,8 +77,12 @@
                                                    href="{{ path('user_profile_public', {user_id:comment.user.id,user_name:comment.user.username|e('url')}) }}"
                                                    rel="author"
                                                    class="username {{ comment.user.color }}">{{ comment.user.username }}</a>
-                                                {% if comment.user.donation > 0 %}<span class="fas fa-gift donator"
-                                                                                        title="ThronesDB Gracious Donator"></span>{% endif %}
+                                                {% if comment.user.role('ROLE_ADMIN') %}
+                                                    <span class="fas fa-user-tie admin" title="Administrator"></span>
+                                                {% endif %}
+                                                {% if comment.user.donation > 0 %}
+                                                    <span class="fas fa-gift donator" title="ThronesDB Gracious Donator"></span>
+                                                {% endif %}
                                                 <time datetime="{{ comment.dateCreation|date('c') }}"
                                                       title="{{ comment.dateCreation|date('F jS, Y') }}">{{ comment.dateCreation|date('n/j/y') }}</time>
                                             </div>
