--- a/src/AppBundle/Resources/views/macros.html.twig
+++ b/src/AppBundle/Resources/views/macros.html.twig
@@ -21,14 +21,24 @@
 {% macro username(user) %}
     <a href="{{ path('user_profile_public', {user_id:user.id,user_name:user.username|e('url')}) }}"
        class="username fg-{{ user.color }}">{{ user.username }}</a>
-    {% if user.donation > 0 %}<span class="fas fa-gift donator" title="ThronesDB Gracious Donator"></span>{% endif %}
+    {% if user.role('ROLE_ADMIN') %}
+        <span class="fas fa-user-tie admin" title="Administrator"></span>
+    {% endif %}
+    {% if user.donation > 0 %}
+        <span class="fas fa-gift donator" title="ThronesDB Gracious Donator"></span>
+    {% endif %}
     <small title="User Reputation">{{ user.reputation }}</small>
 {% endmacro %}
 
 {% macro username_colorless(user) %}
     <a href="{{ path('user_profile_public', {user_id:user.id,user_name:user.username|e('url')}) }}"
        class="username">{{ user.username }}</a>
-    {% if user.donation > 0 %}<span class="fas fa-gift donator" title="ThronesDB Gracious Donator"></span>{% endif %}
+    {% if user.role('ROLE_ADMIN') %}
+        <span class="fas fa-user-tie admin" title="Administrator"></span>
+    {% endif %}
+    {% if user.donation > 0 %}
+        <span class="fas fa-gift donator" title="ThronesDB Gracious Donator"></span>
+    {% endif %}
     <small title="User Reputation">{{ user.reputation }}</small>
 {% endmacro %}
 
