--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -4,6 +4,9 @@
     <title>{{ pagetitle|default('Deckbuilder') }} &middot; ThronesDB</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {% if not allow_search_engine_tracking %}
+        <meta name="robots" content="noindex">
+    {% endif %}
     <meta name="mobile-web-app-capable" content="yes">
     <link rel="icon" sizes="192x192" href="/icon-192.png"/>
     <link rel="apple-touch-icon" sizes="120x120" href="/icon-120.png"/>
