replaces link to twitter account.

--- a/src/AppBundle/Resources/views/footer.de.html.twig
+++ b/src/AppBundle/Resources/views/footer.de.html.twig
@@ -16,7 +16,7 @@
         <p>
             Betrieben von <a href="https://github.com/stopfstedt">stopfstedt</a>
             Kontakt:
-            <a href="https://twitter.com/stefan667" title="Twitter"><span class="fab fa-twitter"></span></a>
+            <a href="https://twitter.com/ThronesDB" title="Twitter"><span class="fab fa-twitter"></span></a>
             <a href="mailto:webmaester@thronesdb.com" title="E-Mail"><span class="fas fa-envelope"></span></a>
         </p>
 
