--- a/src/AppBundle/Resources/views/footer.de.html.twig
+++ b/src/AppBundle/Resources/views/footer.de.html.twig
@@ -3,9 +3,11 @@
         <ul class="list-inline">
             <li><a href="{{ path('about') }}">Über diese Seite</a></li>
             <li><a href="{{ path('api_intro') }}">API</a></li>
-            <li><a href="{{ path('donators') }}">Spender/innen</a> <span class="fas fa-gift donator"
-                                                                         title="Die großzügigen Spender/innen"></span>
+            <li>
+                <a href="{{ path('donators') }}">Spender/innen</a>
+                <span class="fas fa-gift donator" title="Die großzügigen Spender/innen"></span>
             </li>
+            <li><a href="javascript:localStorage.clear()">Daten löschen</a></li>
         </ul>
     </div>
     <div class="col-md-8">
