--- a/src/AppBundle/Resources/views/footer.en.html.twig
+++ b/src/AppBundle/Resources/views/footer.en.html.twig
@@ -3,8 +3,11 @@
         <ul class="list-inline">
             <li><a href="{{ path('about') }}">About</a></li>
             <li><a href="{{ path('api_intro') }}">API</a></li>
-            <li><a href="{{ path('donators') }}">Donators</a> <span class="fas fa-gift donator"
-                                                                    title="The Gracious Donator"></span></li>
+            <li>
+                <a href="{{ path('donators') }}">Donators</a>
+                <span class="fas fa-gift donator" title="The Gracious Donator"></span>
+            </li>
+            <li><a href="javascript:localStorage.clear()">Clear data</a></li>
         </ul>
     </div>
     <div class="col-md-8">
