--- a/src/AppBundle/Resources/views/Search/searchform.html.twig
+++ b/src/AppBundle/Resources/views/Search/searchform.html.twig
@@ -11,14 +11,16 @@
                 <h2>{{ 'search.setbrowse' | trans }}</h2>
                 <ol>
                     {% for cycle in cards_data.allsetsdatathreaded() %}
-                        <li><a href="{{ cycle['url'] }}">{{ cycle['label'] }}</a></li>
-                        {% if cycle['packs'] is defined %}
-                            <ol>
-                                {% for pack in cycle['packs'] %}
-                                    <li><a href="{{ pack['url'] }}">{{ pack['label'] }}</a></li>
-                                {% endfor %}
-                            </ol>
-                        {% endif %}
+                        <li>
+                            <a href="{{ cycle['url'] }}">{{ cycle['label'] }}</a>
+                            {% if cycle['packs'] is defined %}
+                                <ol>
+                                    {% for pack in cycle['packs'] %}
+                                        <li><a href="{{ pack['url'] }}">{{ pack['label'] }}</a></li>
+                                    {% endfor %}
+                                </ol>
+                            {% endif %}
+                        </li>
                     {% endfor %}
                 </ol>
             </div>
