--- a/src/AppBundle/Resources/views/Decklist/decklist.html.twig
+++ b/src/AppBundle/Resources/views/Decklist/decklist.html.twig
@@ -43,7 +43,28 @@
                     <div class="pull-right">
                         <span class="hidden-xs">{{ 'decklist.view.published' | trans }}: </span>
                         <time datetime="{{ decklist.dateCreation|date('c') }}">{{ decklist.dateCreation|date('M d, Y') }}</time>
-                        {{ macros.decklist_social_icons(decklist) }}
+                        {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
+                            <span class="social-icons">
+                                <a id="social-icon-like" href="#" class="social-icon-like" data-toggle="tooltip" data-placement="bottom"
+                                   title="{{ 'decklist.view.social.like' | trans }}">
+                                    <span class="fas fa-heart"></span> <span class="num">{{ decklist.nbVotes }}</span>
+                                </a>
+                                <a id="social-icon-favorite" href="#" class="social-icon-favorite" data-toggle="tooltip" data-placement="bottom"
+                                   title="{{ 'decklist.view.social.favorite' | trans }}">
+                                    <span class="fas fa-star"></span> <span class="num">{{ decklist.nbFavorites }}</span>
+                                </a>
+                                <a id="social-icon-comment" href="#comment-form" class="social-icon-comment" data-toggle="tooltip"
+                                   data-placement="bottom" title="{{ 'decklist.view.social.comment' | trans }}">
+                                    <span class="fas fa-comment"></span> <span class="num">{{ decklist.nbComments }}</span>
+                                </a>
+                                <span class="social-icon-version" data-toggle="tooltip" data-placement="bottom"
+                                      title="{{ 'decklist.view.social.version' | trans }}">
+                                    <span class="fas fa-code-branch"></span> <span class="num">{{ decklist.version }}</span>
+                                </span>
+                            </span>
+                        {% else %}
+                            {{ macros.decklist_social_icons(decklist) }}
+                        {% endif %}
                     </div>
                     {% if duplicate %}
                         {% set duplink %}
