--- a/src/AppBundle/Resources/views/User/profile_public.html.twig
+++ b/src/AppBundle/Resources/views/User/profile_public.html.twig
@@ -26,7 +26,7 @@
                         <a href="{{ path('decklists_list',{type:'find',page:1,author:user.username}) }}">One published
                             decklist.</a>
                     {% else %}
-                        No published decklist.
+                        No published decklists.
                     {% endif %}
                 {% endif %}
             </div>
@@ -37,7 +37,7 @@
                 {% else %}
                     {% if user.reviews|length == 1 %}
                         <a href="{{ path('card_reviews_list_byauthor',{page:1,user_id:user.id}) }}">One published
-                            reviews.</a>
+                            review.</a>
                     {% else %}
                         No published reviews.
                     {% endif %}
