updates FAQ to v2.3

--- a/src/AppBundle/Resources/views/Default/faq.en.html.twig
+++ b/src/AppBundle/Resources/views/Default/faq.en.html.twig
@@ -15,7 +15,7 @@
 <div style="text-align:justify">
 
     <h1 id="FAQ">Notes, Errata, and Frequently Asked Questions</h1>
-    <h3>Version 2.2, effective 5/13/2019</h3>
+    <h3>Version 2.3, effective 9/20/2019</h3>
 
     <p>This document contains card clarification, errata, rule clarifications, frequently asked questions, and quick
         reference material for <em>A Game of Thrones: The Card Game</em>. The most recent version of this document is
@@ -25,8 +25,7 @@
                 class="new">red</span>.</p>
 
     <p>
-        <b>New Content (v2.2):</b>
-        <a href="#Card_Errata">Card Errata</a>,
+        <b>New Content (v2.3):</b>
         <a href="#Joust_Restricted_List">Joust Restricted List</a>,
         <a href="#Melee_Restricted_List">Melee Restricted List</a>,
         <a href="#Frequently_Asked_Questions">Frequently Asked Questions</a>
@@ -86,7 +85,7 @@
             Then, your Asha Greyjoy gains 1 power."
     </p>
 
-    <p class="new">
+    <p>
         <b>
             (v2.2) Kingsgrave <em>(Fury of the Storm, 30)</em>
         </b>
@@ -94,7 +93,7 @@
             Card text is improperly formatted; the word &quot;Kingsgrave&quot; should
             not be formatted as a trait.
     </p>
-    <p class="new">
+    <p>
         <b>
             (v2.2) Dothraki Steed <em>(Fury of the Storm, 36)</em>
         </b>
@@ -537,8 +536,8 @@
         deck as the regular game rules (or card text) allow.</p>
 
     <p class="new">
-        Removed (v2.2):
-        <a class="new" href="https://thronesdb.com/card/01100" target="_blank">Hear Me Roar!</a> <em>(Core, 100)</em>
+        Removed (v2.3):
+        <a class="new" href="https://thronesdb.com/card/10017" target="_blank">Dorne</a> <em>(Sands of Dorne, 17)</em>
     </p>
 
     <p><b><u>Neutral</u>:</b><br>
@@ -557,8 +556,13 @@
         <br>
         <a href="https://thronesdb.com/card/10050" target="_blank">Breaking Ties</a> <em>(Sands of Dorne, 50)</em><br>
         <a href="https://thronesdb.com/card/09051" target="_blank">Trade Routes</a> <em>(House of Thorns, 51)</em><br>
+        <a href="https://thronesdb.com/card/12045" target="_blank">Sea of Blood</a> <em>(Kings of the Isles, 45)</em><br>
         <span class="new">
-            <a class="new" href="https://thronesdb.com/card/12045" target="_blank">Sea of Blood</a> <em>(Kings of the Isles, 45)</em>
+            <a href="https://thronesdb.com/card/06038" class="new" target="_blank">Great Hall</a> <em>(Guarding the Realm, 38)</em>
+        </span>
+        <br>
+        <span class="new">
+            <a href="https://thronesdb.com/card/10048" class="new" target="_blank">Forced March</a> <em>(Sands of Dorne, 48)</em>
         </span>
     </p>
 
@@ -568,9 +572,21 @@
         <br>
         <a href="https://thronesdb.com/card/02092" target="_blank">Iron Mines</a> <em>(Calm Over Westeros, 92)</em>
         <br>
+        <a href="https://thronesdb.com/card/11051" target="_blank">Drowned God Fanatic</a> <em>(Streets of King's Landing, 51)</em>
+        <br>
         <span class="new">
-            <a class="new" href="https://thronesdb.com/card/11051" target="_blank">Drowned God Fanatic</a>
-            <em>(Streets of King's Landing, 51)</em>
+            <a href="https://thronesdb.com/card/06011" class="new" target="_blank">Drowned Disciple</a>
+            <em>(All Men Are Fools, 11)</em>
+        </span>
+        <br>
+        <span class="new">
+            <a href="https://thronesdb.com/card/12002" class="new" target="_blank">Euron Crow’s Eye</a>
+            <em>(Kings of the Isles, 2)</em>
+        </span>
+        <br>
+        <span class="new">
+            <a href="https://thronesdb.com/card/12046" class="new" target="_blank">We Take Westeros!</a>
+            <em>(Kings of the Isles, 46)</em>
         </span>
     </p>
 
@@ -585,11 +601,11 @@
         <a href="https://thronesdb.com/card/01109" target="_blank">The Red Viper</a> <em>(Core, 109)</em><br>
         <a href="https://thronesdb.com/card/04017" target="_blank">Tower of the Sun</a> <em>(Across the Seven Kingdoms, 17)</em>
         <br>
-        <a href="https://thronesdb.com/card/10017" target="_blank">Dorne</a> <em>(Sands of Dorne, 17)</em>
+        <a href="https://thronesdb.com/card/11076" target="_blank">A Mission in Essos</a> <em>(Music of Dragons, 76)</em>
         <br>
         <span class="new">
-            <a class="new" href="https://thronesdb.com/card/11076" target="_blank">A Mission in Essos</a>
-            <em>(Music of Dragons, 76)</em>
+            <a href="https://thronesdb.com/card/12029" class="new" target="_blank">Desert Raider</a>
+            <em>(Kings of the Isles, 29)</em>
         </span>
     </p>
 
@@ -597,7 +613,16 @@
         <b><u>Stark</u>:</b><br>
         <a href="https://thronesdb.com/card/11021" target="_blank">Wyman Manderly</a> <em>(The March on Winterfell, 21)</em>
         <br>
-        <a href="https://thronesdb.com/card/02102" target="_blank">Ward</a> <em>(True Steel, 102)</em>
+        <a href="https://thronesdb.com/card/02102" target="_blank">Ward</a> <em>(True Steel, 102)</em> <br>
+        <span class="new">
+            <a href="https://thronesdb.com/card/11082" class="new" target="_blank">Skagos</a>
+            <em>(In Daznak’s Pit, 82)</em>
+        </span>
+        <br>
+        <span class="new">
+            <a href="https://thronesdb.com/card/11061" class="new" target="_blank">Meera Reed</a>
+            <em>(Music of Dragons, 61)</em>
+        </span>
     </p>
     <p>
         <b><u>Tyrell</u>:</b><br>
@@ -609,7 +634,11 @@
         <a href="https://thronesdb.com/card/03038" target="_blank">To the Rose Banner!</a> <em>(Wolves of the North,
             38)</em><br>
         <a href="https://thronesdb.com/card/09001" target="_blank">Mace Tyrell</a> <em>(House of Thorns, 1)</em><br>
-        <a href="https://thronesdb.com/card/09017" target="_blank">The Hightower</a> <em>(House of Thorns, 17)</em>
+        <a href="https://thronesdb.com/card/09017" target="_blank">The Hightower</a> <em>(House of Thorns, 17)</em><br>
+        <span class="new">
+            <a href="https://thronesdb.com/card/11044" class="new" target="_blank">Growing Ambition</a>
+            <em>(Streets of King’s Landing, 44)</em>
+        </span>
     </p>
 
     <p>
@@ -641,6 +670,11 @@
         <a href="https://thronesdb.com/card/05049" target="_blank">Littlefinger’s Meddling</a> <em>(Lions of Casterly Rock, 49)</em>
         <br>
         <a href="https://thronesdb.com/card/06040" target="_blank">The Annals of Castle Black</a> <em>(Guarding the Realm, 40)</em>
+        <br>
+        <span class="new">
+            <a href="https://thronesdb.com/card/08120" class="new" target="_blank">You Win or You Die</a>
+            <em>(Someone Always Tells, 120)</em>
+        </span>
     </p>
 
     <p><b><u>Greyjoy</u>:</b><br>
@@ -653,7 +687,13 @@
         <a href="https://thronesdb.com/card/05001" target="_blank">Cersei Lannister</a> <em>(Lions of Casterly Rock,
             1)</em><br>
         <a href="https://thronesdb.com/card/05010" target="_blank">Taena Merryweather</a> <em>(Lions of Casterly Rock,
-            10)</em></p>
+            10)</em>
+        <br>
+        <span class="new">
+            <a href="https://thronesdb.com/card/06011" class="new" target="_blank">Drowned Disciple</a>
+            <em>(All Men Are Fools, 11)</em>
+        </span>
+    </p>
 
     <p><b><u>Martell</u>:</b><br>
         <a href="https://thronesdb.com/card/01119" target="_blank">Doran's Game</a> <em>(Core, 119)</em>
@@ -794,11 +834,11 @@
         <a href="https://thronesdb.com/card/05017" target="_blank">Golden Tooth</a>.</p>
 
 
-    <h3 id="FAQ_21" class="new">Limited Card as Duplicate</h3>
-    <p class="new">
+    <h3 id="FAQ_21">Limited Card as Duplicate</h3>
+    <p>
         <i>If I play a limited card as a duplicate, does it count as my limited card for the round?</i>
     </p>
-    <p class="new">
+    <p>
         No. When you marshal a card as a duplicate, it is not considered to have any of its printed keywords,
         including the limited keyword.
     </p>
@@ -975,6 +1015,52 @@
         applied replacement effect. If Scouting Vessel’s ability is triggered first, Tywin Lannister’s ability
         cannot then be triggered, because the triggering condition of “exactly 1 card” being discarded from
         a player’s deck is no longer imminent.
+    </p>
+
+    <h3 id="FAQ_22" class="new">No Surprises</h3>
+    <p class="new">
+        <i>
+            My opponent plays <a href="https://thronesdb.com/card/13022" target="_blank">No Surprises</a>
+            (King’s Landing, 22), which states that I cannot “bring cards out of shadows.” Can I still use the ability
+            on <a href="https://thronesdb.com/card/11115" target="_blank">Starfall Spy</a> (Dance of Shadows, 115)
+            to put a card directy into play from shadows?
+        </i>
+    </p>
+    <p class="new">
+        No. Any effect that causes a card to come out of shadows is
+        considered to be “bringing a card out of shadows,” including
+        effects like Starfall Spy that put a card into play from shadows.
+        Therefore, such effects are prevented by the effect of No Suprises.
+    </p>
+
+    <h3 id="FAQ_23" class="new">&quot;A Cask of Ale&quot;</h3>
+    <p class="new">
+        <i>
+            Can I use <a href="https://thronesdb.com/card/14023" target="_blank">&quot;A Cask of Ale&quot;</a>
+            (Fury of the Storm, 23) to move power to a plot card, a melee title, or an agenda?
+        </i>
+    </p>
+    <p>
+        &quot;A Cask of Ale&quot; can move power to a player’s revealed plot card
+        or melee title, as each of those cards is considered to be in play
+        under that player’s control. &quot;A Cask of Ale&quot; cannot move power
+        to an agenda, as agendas are not in play.
+    </p>
+
+    <h3 id="FAQ_24" class="new">Baelor Blacktyde</h3>
+    <p class="new">
+        <i>
+            If my opponent has <a href="https://thronesdb.com/card/13011" target="_blank">Baelor Blacktyde</a>
+            (King’s Landing, 11) in play and I play
+            <a href="https://thronesdb.com/card/09011" target="_blank">Emissary of the Hightower</a>
+            (House of Thorns, 11), choosing an event of which I have a single copy in my discard pile, will
+            Baelor’s ability prevent me from playing that event?
+        </i>
+    </p>
+    <p>
+        No. Baelor Blacktyde’s ability will not prevent you from playing
+        an event from your discard pile if there are no other copies of
+        that event in your discard pile.
     </p>
 
     <h1 id="Quick_Reference">Quick Reference</h1>
