--- a/src/AppBundle/Resources/views/Decklist/toolbar.html.twig
+++ b/src/AppBundle/Resources/views/Decklist/toolbar.html.twig
@@ -1,8 +1,8 @@
 <a href="{{ path('decklist_edit', {decklist_id:decklist.id}) }}" title="{{ 'decklist.view.toolbar.edit' | trans }}"
-   id="decklist-edit" class="btn btn-sm btn-default" style="display:none">
+   class="btn btn-sm btn-default decklist-edit" style="display:none">
     <span class="fas fa-pencil-alt text-primary"></span> {{ 'forms.edit' | trans }}
 </a>
-<a href="#" title="Delete decklist" id="decklist-delete" class="btn btn-sm btn-default" style="display:none">
+<a href="#" title="Delete decklist" class="btn btn-sm btn-default decklist-delete" style="display:none">
     <span class="fas fa-trash-alt text-danger"></span> {{ 'forms.delete' | trans }}
 </a>
 <a href="{{ path('deck_copy', {decklist_id:decklist.id}) }}" class="btn btn-sm btn-default">
